--- a/consulta.html
+++ b/consulta.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
     <meta charset="utf-8" />
-		<title>Orçamento pessoal</title>
+		<title>Lojas Mercadoria Diversas</title>
 
     <link rel="stylesheet" href="estilo.css">
 
@@ -48,7 +48,7 @@
     <div class="container">
       <div class="row mb-5">
         <div class="col">
-          <h1 class="display-4">Consulta de despesas</h1>
+          <h1 class="display-4">Consulta mercadoria</h1>
         </div>
       </div>
 
@@ -58,7 +58,6 @@
             <option value="">Ano</option>
             <option value="2022">2022</option>
             <option value="2023">2023</option>
-            <option value="2024">2024</option>
           </select>
         </div>
 
@@ -85,27 +84,32 @@
         </div>
 
         <div class="col-md-6">
-          <select class="form-control" id="tipo">
-            <option value="">Tipo</option>
-            <option value="1">Alimentação</option>
-            <option value="2">Educação</option>
-            <option value="3">Lazer</option>
-            <option value="4">Saúde</option>
-            <option value="5">Transporte</option>
+          <select class="form-control" id="Categoria">
+            <option value="">Categoria</option>
+            <option value="1">Escolar</option>
+            <option value="2">Informática</option>
+            <option value="3">Móveis</option>
+            <option value="4">Eletro domestico</option>
+            <option value="5">Celular</option>
+            <option value="6">Roupas</option>
           </select>
         </div>
       </div>
 
-      <div class="row  mb-5">
-        <div class="col-md-8">
+      <div class="row">
+        <div class="col-md-6">
           <input type="text" class="form-control" placeholder="Descrição" id="descricao" />
+        </div>
+
+        <div class="col-md-2">
+          <input type="text" class="form-control" placeholder="Quantidade" id="quantidade" />
         </div>
 
         <div class="col-md-2">
           <input type="text" class="form-control" placeholder="Valor" id="valor" />
         </div>
 
-        <div class="col-md-2 d-flex justify-content-end">
+        <div class="col-md-2 d-flex justify-content-end mb-5">
           <button type="button" class="btn btn-color" onclick="pesquisarDespesa()">
             <i class="fas fa-search"></i>
           </button>
