--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 	<head>
     <meta charset="utf-8" />
 		<title>Loja Mercadorias Diversas</title>
-    <script src="appM.js"></script>
+    <script src="app.js"></script>
     
     <!--Estilo costumizado-->
     <link rel="stylesheet" href="estilo.css">
@@ -119,7 +119,7 @@
     </div>
 
      <!-- Modal sucesso -->
-     <div class="modal fade" id="modalRegistraMercadoria" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal fade" id="modalRegistraMercadoria" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div id="modal_titulo_div">
