--- a/consulta.html
+++ b/consulta.html
@@ -31,7 +31,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-color mb-5">
       <div class="container">
         <a class="navbar-brand" href="#">
-           <img src="logo.png" width="50" height="35" alt="Orçamento pessoal">
+          <i class="fa-brands fa-opencart"></i>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -90,7 +90,7 @@
         </div>
 
         <div class="col-md-6">
-          <select class="form-control" id="Categoria">
+          <select class="form-control" id="categoria">
             <option value="">Categoria</option>
             <option value="1">Escolar</option>
             <option value="2">Informática</option>
@@ -116,7 +116,7 @@
         </div>
 
         <div class="col-md-2 d-flex justify-content-end mb-5">
-          <button type="button" class="btn btn-color" onclick="pesquisarDespesa()">
+          <button type="button" class="btn btn-color" onclick="pesquisarMercadoria()">
             <i class="fas fa-search"></i>
           </button>
         </div>
