--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
 
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-
     <script src="https://kit.fontawesome.com/55527a94d3.js" crossorigin="anonymous"></script>
 
 
@@ -61,7 +60,7 @@
 
       <div class="row mb-2">
         <div class="col-md-2">
-          <select class="form-control" id="ano">
+          <select aria-label="State" class="form-control" id="ano">
             <option value="">Ano</option>
             <option value="2022">2022</option>
             <option value="2023">2023</option>
@@ -69,7 +68,7 @@
         </div>
 
         <div class="col-md-2">
-          <select class="form-control" id="mes">
+          <select aria-label="State" class="form-control" id="mes">
             <option value="">Mês</option>
             <option value="1">Janeiro</option>
             <option value="2">Fevereiro</option>
@@ -91,7 +90,7 @@
         </div>
 
         <div class="col-md-6">
-          <select class="form-control" id="categoria">
+          <select aria-label="State" class="form-control" id="categoria">
             <option value="">Categoria</option>
             <option value="1">Escolar</option>
             <option value="2">Informática</option>
@@ -117,7 +116,7 @@
         </div>
 
         <div class="col-md-2 d-flex justify-content-end">
-          <button type="button" class="btn btn-color" onclick="cadastrarMercadoria()">
+          <button aria-label="Name" type="button" class="btn btn-color" onclick="cadastrarMercadoria()">
             <i class="fas fa-plus"></i>
           </button>
         </div>
